--- a/simple/templates/simple/index.html
+++ b/simple/templates/simple/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 	    <title>Welcome!</title>
-	    <link rel="stylesheet" type="text/css" href="{% statc "index.css" %}"/>
+	    <link rel="stylesheet" type="text/css" href="{% static "index.css" %}"/>
 	</head>
 	<body>
 		<div class = "container">
