--- a/simple/templates/simple/index.html
+++ b/simple/templates/simple/index.html
@@ -3,13 +3,13 @@
 <html>
 	<head>
 	    <title>Welcome!</title>
-	    <link rel="stylesheet" type="text/css" href="{% static "index.css" %}"/>
+	    <link rel="stylesheet" type="text/css" href="{% static "css/index.css" %}"/>
 	</head>
 	<body>
 		<div class = "container">
 			<nav class = "navbar">
-	            <img src="{% static "logo.png" %}"/>
-	            <img src="{% static "title.png" %}"/>
+	            <img src="{% static "img/logo.png" %}"/>
+	            <img src="{% static "img/title.png" %}"/>
 	        </nav>
 	        <br><br><br>
 	        <a class="butn" href="">Enter</a>
