--- a/simpledjango/static/css/index.css
+++ b/simpledjango/static/css/index.css
@@ -5,7 +5,7 @@
 
 body{
 	font-family: 'koverwatch';
-    background-image: url(background_img.jpg);
+    background-image: url(../img/background_img.jpg);
     margin-top: 12%;
     margin-left: 0;
     margin-right: 0;
