--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -4,7 +4,7 @@
 
 <head>
     <title></title>
-    <link rel="stylesheet" type="text/css" href="{% static "css/test.css" %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static "css/home.css" %}"/>
 </head>
 
 <body>
