--- a/simple/templates/simple/index.html
+++ b/simple/templates/simple/index.html
@@ -12,7 +12,7 @@
 	            <img src="{% static "img/title.png" %}"/>
 	        </nav>
 	        <br><br><br>
-	        <a class="butn" href="">Enter</a>
+	        <a class="butn" href="/home">Enter</a>
 			<footer></footer>
 		</div>
 	</body>
