--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -20,7 +20,7 @@
             <div class = "insearch">
                 <input type="text" name="question"/>
                 <img src="{% static "img/sample1.png" %}"/>
-                <img src="{% static "sample1.png" %}"/>
+                <img src="{% static "img/sample1.png" %}"/>
             </div>
 		</div>
 		<div class = "wrapper">
