test conversation api

--- a/simple/templates/simple/index.html
+++ b/simple/templates/simple/index.html
@@ -13,6 +13,7 @@
 	        </nav>
 	        <br><br><br>
 	        <a class="butn" href="/home">Enter</a>
+            {{ answer }}
 			<footer></footer>
 		</div>
 	</body>
