--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -1,4 +1,3 @@
-{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 
@@ -10,11 +9,11 @@
 <body>
 	<div class = "container">
 		<nav class = "navbar">
-            <img src="{% static "img/logo.png" %}"/>
-            <img src="{% static "img/title.png" %}"/>
+            <img src="{% static "logo.png" %}"/>
+            <img src="{% static "title.png" %}"/>
         </nav>
 		<div class = "description">
-			<span class="red">천지</span><span class="blue">미</span><span class="small">CHUNZIME</span>는 더 이상 자연재해로부터 안전하지 않은 대한민국에서 IBM에서 제공하는 WATSON AI를 통하여 재해에 대한 기초 상식, 대처법, 발생 규모와 시기 등을 알려주어 안전한 대한민국을 만들고자 합니다.<br/><br/><br/>아래에 있는 검색을 통해 얻고 싶은 정보를 입력해보세요!<br/>(EX. 지진이 일어났을 때 대처법은?)
+			<span class="red">천지</span><span class="blue">미</span><span class="small">CHUNZIME</span>는 더 이상 자연재해로부터 안전하지 않은 대한민국에서 IBM에서 제공하는 WATSON API를 통하여 재해에 대한 기초 상식, 대처법, 발생 규모와 시기 등을 알려주어 안전한 대한민국을 만들고자 합니다.<br/><br/><br/>아래에 있는 검색을 통해 얻고 싶은 정보를 입력해보세요!<br/>(EX. 지진이 일어났을 때 대처법은?)
 		</div>
 		<div class = "search">
             <div class = "insearch">
@@ -24,17 +23,30 @@
             </div>
 		</div>
 		<div class = "wrapper">
-			<div class = "inner">
-				<div></div>
-			</div>
-			<div>
-				대답 완료
-			</div>
-			<div class = "inner">
-				
-			</div>
+            <div class = "box">
+                <div class="profile">
+                    <img src = "{% static "ilban_in.png" %}"/>
+                    <span>나의 질문</span>
+                </div>
+                <div class="chatroom">
+
+                </div>
+            </div>
+            <div class = "middlebox">
+                답변 완료
+            </div>
+            <div class = "box">
+                <div class="profile" style="float:right;">
+                    <span>Watson 박사님의 대답</span>
+                    <img src = "{% static "baksa_nim.png" %}"/>
+                </div>
+                <div class="chatroom">
+
+                </div>
+            </div>
+            <div style="clear:both;"></div>
 		</div>
-		<footer></footer>
+        <footer></footer>
 	</div>
 </body>
 
