--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -10,8 +10,8 @@
 <body>
 	<div class = "container">
 		<nav class = "navbar">
-            <img src="{% static "logo.png" %}"/>
-            <img src="{% static "title.png" %}"/>
+            <img src="{% static "img/logo.png" %}"/>
+            <img src="{% static "img/title.png" %}"/>
         </nav>
 		<div class = "description">
 			<span class="red">천지</span><span class="blue">미</span><span class="small">CHUNZIME</span>는 더 이상 자연재해로부터 안전하지 않은 대한민국에서 IBM에서 제공하는 WATSON API를 통하여 재해에 대한 기초 상식, 대처법, 발생 규모와 시기 등을 알려주어 안전한 대한민국을 만들고자 합니다.<br/><br/><br/>아래에 있는 검색을 통해 얻고 싶은 정보를 입력해보세요!<br/>(EX. 지진이 일어났을 때 대처법은?)
@@ -26,7 +26,7 @@
 		<div class = "wrapper">
             <div class = "box">
                 <div class="profile">
-                    <img src = "{% static "ilban_in.png" %}"/>
+                    <img src = "{% static "img/ilban_in.png" %}"/>
                     <span>나의 질문</span>
                 </div>
                 <div class="chatroom">
@@ -39,7 +39,7 @@
             <div class = "box">
                 <div class="profile" style="float:right;">
                     <span>Watson 박사님의 대답</span>
-                    <img src = "{% static "baksa_nim.png" %}"/>
+                    <img src = "{% static "img/baksa_nim.png" %}"/>
                 </div>
                 <div class="chatroom">
 
