--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -14,7 +14,7 @@
             <img src="{% static "img/title.png" %}"/>
         </nav>
 		<div class = "description">
-			<span class="red">천지</span><span class="blue">미</span><span class="small">CHUNZIME</span>는 더 이상 자연재해로부터 안전하지 않은 대한민국에서 IBM에서 제공하는 WATSON API를 통하여 재해에 대한 기초 상식, 대처법, 발생 규모와 시기 등을 알려주어 안전한 대한민국을 만들고자 합니다.<br/><br/><br/>아래에 있는 검색을 통해 얻고 싶은 정보를 입력해보세요!<br/>(EX. 지진이 일어났을 때 대처법은?)
+			<span class="red">천지</span><span class="blue">미</span><span class="small">CHUNZIME</span>는 더 이상 자연재해로부터 안전하지 않은 대한민국에서 IBM에서 제공하는 WATSON API를 통하여 재해에 대한 기초 상식, 대처법, 발생 규모와 시기 등을 알려주어 안전한 대한민국을 만들고자 합니다.<br/><br/><br/>아래에 있는 검색을 통해 얻고 싶은 정보를 입력해보세요!<br/>(EX. Tell me how to deal with earthquake)
 		</div>
 		<div class = "wrapper">
             <div class = "box">
