--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -34,7 +34,7 @@
 	</div>
 	<script type="text/javascript">
 		function tongsin(){
-			var str = $("#question").text();
+			var str = $("#question").val();
 			userinput(str);
 			$.ajax({
 				type: "post",
