--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -62,6 +62,7 @@
 			div.appendChild(image);
 			div.appendChild(div2);
 			parent.appendChild(div);
+			parent.scrollTop = parent.scrollHeight;
 		}
 
 		function watsoninput(str){
@@ -77,6 +78,7 @@
 			div.appendChild(div2);
 			div.appendChild(image);
 			parent.appendChild(div);
+			parent.scrollTop = parent.scrollHeight;
 		}
 	</script>
 </body>
