--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -40,9 +40,9 @@
 		}
 
 		$("#send_btn").hover(function() {
-   			$(this).src("{% static "img/sendover.png" %}");
+   			$(this).attr("src", "{% static "img/sendover.png" %}");
 		}, function(){
-    		$(this).src("{% static "img/send.png" %}");
+    		$(this).attr("src", "{% static "img/send.png" %}");
 		});
 
 		function tongsin(){
