--- a/simpledjango/static/css/home.css
+++ b/simpledjango/static/css/home.css
@@ -65,7 +65,7 @@ body{
     line-height: normal;
     padding: .8em .5em;
     outline-style: none;
-    border: solid #00A0E9;
+    border: solid rgba(241,241,241,100);
     -webkit-appearance: none;  /* 브라우저별 기본 스타일링 제거 */
     -moz-appearance: none;
     appearance: none;
@@ -74,7 +74,6 @@ body{
 .insearch img{
     height: 30.4px;
     width: 15%;
-    border: solid #00A0E9;
     vertical-align: middle;
     margin-left: 10px;
 }
