--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -27,7 +27,7 @@
 		<div class = "search">
             <div class = "insearch">
                 <input type="text" name="question" id="question"/>
-                <img id="send_btn" src="{% static "img/send.png" %}" onclick = "tongsin();"/>
+                <img id="send_btn" src="{% static "img/send.png" %}" onclick = "tongsin();" onkeydown = "onKeyDown();" />
             </div>
 		</div>
         <footer></footer>
