--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -47,7 +47,7 @@
 
 		function tongsin(){
 			var str = $("#question").val();
-		    $("#question").val() = "";
+		    $("#question").val("");
 			userinput(str);
 			$.ajax({
 				type: "get",
