can't empty input

--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -47,6 +47,7 @@
 
 		function tongsin(){
 			var str = $("#question").val();
+			if(str.length == 0) return;
 		    $("#question").val("");
 			userinput(str);
 			$.ajax({
