--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -30,7 +30,12 @@
                 <img id="send_btn" src="{% static "img/send.png" %}" onclick = "tongsin();" />
             </div>
 		</div>
-        <footer></footer>
+        <footer>
+        	<div class="site"><a href=""><img src=""/></a></div>
+        	<div class="site"><a href=""><img src=""/></a></div>
+        	<div class="site"><a href=""><img src=""/></a></div>
+        	<div class="site"><a href=""><img src=""/></a></div>
+        </footer>
 	</div>
 	<script type="text/javascript">
 		function onKeyDown(){
