can't empty input

--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -52,8 +52,8 @@
 
 		function tongsin(){
 			var str = $("#question").val();
-
-			if($.trim(str).length == 0){
+			str = $.trim(str);
+			if(str.length == 0){
 				$("#question").val("");
 				return;
 			}
