--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -5,11 +5,12 @@
 <head>
     <title>Chunzime</title>
     <link rel="stylesheet" type="text/css" href="{% static "css/home.css" %}"/>
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js">
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script type="text/javascript">
     	var stack = [];
     	var turn_cnt = 0;
     	var req_cnt = 0;
-    	var random = Math.floor(Math.random()*1000000000) + 1;
+    	var random2 = Math.floor(Math.random()*1000000000) + 1;
     </script>
 </head>
 
@@ -70,14 +71,14 @@
 				type: "get",
 				url: "/conversation",
 				dataType: "json",
-				data: {
-                    conversation_id: random,
+				data: {context:JSON.stringify({
+                    conversation_id: random2,
                     system: {
                         dialog_stack: stack,
                         dialog_turn_counter: turn_cnt,
                         dialog_request_counter: req_cnt
                     }
-                },
+                }),message:str},
 				success: function(result) {
 					$("#question").disabled = true;
 					var str2 = "";
