--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -36,7 +36,7 @@
                 <img id="send_btn" src="{% static "img/send.png" %}" onclick = "tongsin();" />
             </div>
 		</div>
-		<div style="margin: 30 0 30 0;border: solid black 3px;"></div>
+		<div style="margin: 30px 0px 30px 0;border: solid black 1px;"></div>
         <footer>
         	<div class="site"><a href="https://www.data.go.kr/"><img src="{% static "img/f_1.png" %}"/></a></div>
         	<div class="site"><a href="http://www.kma.go.kr/index.jsp"><img src="{% static "img/f_2.png" %}"/></a></div>
