--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -11,6 +11,8 @@
     	var turn_cnt = 0;
     	var req_cnt = 0;
     	var random2 = Math.floor(Math.random()*1000000000) + 1;
+    	$("#question").val("Hello Watson, can I ask some question to you?");
+    	tongsin();
     </script>
 </head>
 
