--- a/simpledjango/static/css/index.css
+++ b/simpledjango/static/css/index.css
@@ -5,7 +5,11 @@
 
 body{
 	font-family: 'koverwatch';
-    background-image: url(../img/background_img.gif);
+    background-image: url(../img/background_img.gif) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
     margin-top: 12%;
     margin-left: 0;
     margin-right: 0;
@@ -19,7 +23,6 @@ body{
 
 
 .container{
-    background-color: rgba(255,255,255,0.75);
     text-align: center;
     padding-top: 70px;
     padding-bottom: 70px;
