--- a/simpledjango/static/css/index.css
+++ b/simpledjango/static/css/index.css
@@ -4,11 +4,12 @@
 }
 
 html{  
-    background-image: url(../img/background_img.gif) no-repeat center center fixed;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
+    background-image: url(../img/background_img.gif);
+    background-repeat: no-repeat;
+    background-position: center;
     background-size: cover;
+    width: 100%;
+    height: 100%;
 }
 
 body{
@@ -42,6 +43,5 @@ a{
 }
 
 a:hover{
-    text-decoration: underline;
     text-shadow: 2px 2px gray;
 }
