--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -70,6 +70,9 @@
 		    $("#question").val("");
 			userinput(str);
 			$("#send_btn").attr("src", "{% static "img/sendloading.gif" %}");
+			if (str.split(' ').length == 1) {
+				str = "tell me what is " + str;
+			}
 			$.ajax({
 				type: "get",
 				url: "/conversation",
