make html works on output div

--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -109,6 +109,7 @@
 			div2.className = "chat";
 			var t = document.createTextNode(str);
 			div2.appendChild(t);
+			div2.innerHTML = str
 			div.appendChild(image);
 			div.appendChild(div2);
 			parent.appendChild(div);
@@ -123,8 +124,9 @@
 			image.src = "{% static "img/baksa_nim.png" %}";
 			var div2 = document.createElement("div");
 			div2.className = "chat";
-			var t = document.createTextNode(str);
-			div2.appendChild(t);
+			//var t = document.createTextNode(str);
+			//div2.appendChild(t);
+			div2.innerHTML = str
 			div.appendChild(image);
 			div.appendChild(div2);
 			parent.appendChild(div);
