--- a/simpledjango/static/css/home.css
+++ b/simpledjango/static/css/home.css
@@ -66,7 +66,7 @@ body{
     padding: .8em .5em;
     outline-style: none;
     border: solid rgba(49, 49, 49, 1);
-    border-radius: 6px;
+    border-radius: 3px;
     -webkit-appearance: none;  /* 브라우저별 기본 스타일링 제거 */
     -moz-appearance: none;
     appearance: none;
@@ -92,6 +92,8 @@ body{
     height: 400px;
     background-color: white;
     overflow-y: scroll;
+    border: 2px solid rgba(49, 49, 49, 1);
+    border-radius: 6px;
 }
 
 .user{
@@ -133,14 +135,17 @@ body{
 }
 
 .chat{
-    font-family: Nanum Gothic;
+    font-family: sans-serif;
     max-width: 60%;
     font-size: 1rem;
     padding: 5px 20px 5px 20px;
     vertical-align: middle;
     overflow: auto;
     word-break: break-all;
-    border-radius: 25px;
+    border-radius: 6px;
+    color: white;
+    box-shadow: 0px 1px 3px gray;
+    font-weight: bold;
 }
 
 .site{
