--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -38,7 +38,7 @@
 		</div>
 		<div style="margin: 30px 0px 30px 0;border: solid black 1px;"></div>
         <footer>
-        	<div class="site"><a href="https://www.data.go.kr/"><img src="{% static "img/f_1.png" %}"/></a></div>
+        	<div class="site"><a href="http://www.mpss.go.kr/home/index.html"><img src="{% static "img/f_1.png" %}"/></a></div>
         	<div class="site"><a href="http://www.kma.go.kr/index.jsp"><img src="{% static "img/f_2.png" %}"/></a></div>
         	<div class="site"><a href="http://kostat.go.kr/portal/korea/index.action"><img src="{% static "img/f_3.png" %}"/></a></div>
         	<div class="site"><a href="http://www.safekorea.go.kr/idsiSFK/index.jsp"><img src="{% static "img/f_4.png" %}"/></a></div>
