--- a/simpledjango/static/css/home.css
+++ b/simpledjango/static/css/home.css
@@ -65,7 +65,7 @@ body{
     line-height: normal;
     padding: .8em .5em;
     outline-style: none;
-    border: solid rgba(49, 49, 49, 1);
+    border: solid 2px rgba(49, 49, 49, 1);
     border-radius: 3px;
     -webkit-appearance: none;  /* 브라우저별 기본 스타일링 제거 */
     -moz-appearance: none;
