--- a/simpledjango/static/css/home.css
+++ b/simpledjango/static/css/home.css
@@ -138,7 +138,7 @@ body{
     font-family: sans-serif;
     max-width: 60%;
     font-size: 1rem;
-    padding: 5px 20px 5px 20px;
+    padding: 7px;
     vertical-align: middle;
     overflow: auto;
     word-break: break-all;
