--- a/simpledjango/static/css/home.css
+++ b/simpledjango/static/css/home.css
@@ -162,6 +162,13 @@ body{
     width: 90%;
     margin-right: 5%;
     margin-left: 5%;
+    background-color: rgba(49, 49, 49, 1);
+    font-weight: bolder;
+    color: white;
+    border: 3px solid white;
+}
+
+.deepdark{
 }
 
 .site{
