--- a/simpledjango/static/css/home.css
+++ b/simpledjango/static/css/home.css
@@ -35,8 +35,8 @@ body{
     width: 920px;
     margin-left: auto;
     margin-right: auto;
-    background-color: rgba(241,241,241,1);
-    padding-bottom: 30px;
+    background-image: url("../img/background_img.jpg");
+    padding: 30px;
 }
 
 .description{
@@ -145,7 +145,6 @@ body{
     border-radius: 6px;
     color: white;
     box-shadow: 0px 1px 3px gray;
-    font-weight: bold;
 }
 
 .col-12{
@@ -164,7 +163,7 @@ body{
     margin-left: 5%;
     padding: 4px;
     background-color: rgba(49, 49, 49, 1);
-    font-weight: bolder;
+    font-weight: bold;
     color: white;
     border-style: none;
 }
