--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -45,6 +45,7 @@
         	<div style="clear:both;"></div>
         </footer>
 	</div>
+	<div class="plusbtn"></div>
 	<script type="text/javascript">
 		function onKeyDown(){
 		    if(event.keyCode == 13){
