--- a/simpledjango/static/css/home.css
+++ b/simpledjango/static/css/home.css
@@ -187,7 +187,7 @@ body{
     right: 20px;
     bottom: 20px;
     border-radius: 50px;
-    background-color: yellow;
+    background-image: url("../img/plusbtn.png");
 }
 
 footer{
