--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -46,7 +46,7 @@
         	<div style="clear:both;"></div>
         </footer>
 	</div>
-	<div class="plusbtn"></div>
+	<button class="plusbtn"></button>
 	<script type="text/javascript">
 		function onKeyDown(){
 		    if(event.keyCode == 13){
