--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -12,6 +12,7 @@
     	var req_cnt = 0;
     	var random2 = Math.floor(Math.random()*1000000000) + 1;
     	var context = {'conversation_id':random2};
+    	var lastMessage = "";
     </script>
 </head>
 
@@ -52,6 +53,9 @@
 		    if(event.keyCode == 13){
 		    	tongsin();
 		    }
+		    if(event.keyCode == 38){
+		    	$("#question").val(lastMessage);
+		    }
 		}
 
 
@@ -73,6 +77,7 @@
 			}
 		    $("#question").val("");
 			userinput(str);
+			lastMessage = str;
 			$("#send_btn").attr("src", "{% static "img/sendloading.gif" %}");
 			if (str.split(' ').length == 1) {
 				str = "tell me what is " + str;
