--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" type="text/css" href="{% static "css/home.css" %}"/>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript">
-    	var stack = [];
     	var turn_cnt = 0;
     	var req_cnt = 0;
     	var random2 = Math.floor(Math.random()*1000000000) + 1;
     	var context = {'conversation_id':random2};
-    	var lastMessage = "";
+    	var messageStack = {};
+    	var upkey = 0;
+    	var stacklen = 0;
     </script>
 </head>
 
@@ -47,6 +48,15 @@
         	<div style="clear:both;"></div>
         </footer>
 	</div>
+	<div class="sample">
+		<ul>
+			<li>Sample questions</li>
+			<li>Tell me how to deal with earthquake.</li>
+			<li>What is the difference between magnitude and intensity of an earthquake.</li>
+			<li>I want to know what kind of disasters is in Korea.</li>
+			<li>Would you tell me how to measure disasters occur in Korea?</li>
+		</ul>
+	</div>
 	<button class="plusbtn"></button>
 	<script type="text/javascript">
 		function onKeyDown(){
@@ -54,9 +64,20 @@
 		    	tongsin();
 		    }
 		    if(event.keyCode == 38){
-		    	$("#question").val(lastMessage);
+		    	upkey += 1;
 		    }
+		    if(event.keyCode == 40){
+		    	upkey -= 1;
+		    }
+		    if(upkey >= length) upkey = length;
+		    if(upkey <= -1) upkey = -1;
+		    if(upkey == -1) $("question").val("");
+		    else $("question").val(messageStack[length - upkey]);
 		}
+
+		$("question").blur(function(){
+			upkey = -1;
+		});
 
 
 
@@ -77,7 +98,8 @@
 			}
 		    $("#question").val("");
 			userinput(str);
-			lastMessage = str;
+			messageStack.push(str);
+			stacklen++;
 			$("#send_btn").attr("src", "{% static "img/sendloading.gif" %}");
 			if (str.split(' ').length == 1) {
 				str = "tell me what is " + str;
