--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -11,7 +11,7 @@
     	var req_cnt = 0;
     	var random2 = Math.floor(Math.random()*1000000000) + 1;
     	var context = {'conversation_id':random2};
-    	var messageStack = {};
+    	var messageStack = [];
     	var upkey = 0;
     	var stacklen = 0;
     </script>
