--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -69,10 +69,10 @@
 		    if(event.keyCode == 40){
 		    	upkey -= 1;
 		    }
-		    if(upkey >= length) upkey = length;
+		    if(upkey >= stacklen) upkey = stacklen;
 		    if(upkey <= -1) upkey = -1;
 		    if(upkey == -1) $("question").val("");
-		    else $("question").val(messageStack[length - upkey]);
+		    else $("question").val(messageStack[stacklen - upkey]);
 		}
 
 		$("question").blur(function(){
