--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -65,17 +65,21 @@
 		    }
 		    if(event.keyCode == 38){
 		    	upkey += 1;
+			    if(upkey >= stacklen) upkey = stacklen;
+			    if(upkey <= -1) upkey = -1;
+			    if(upkey == -1) $("#question").val("");
+			    else $("#question").val(messageStack[stacklen - upkey]);
 		    }
 		    if(event.keyCode == 40){
 		    	upkey -= 1;
+			    if(upkey >= stacklen) upkey = stacklen;
+			    if(upkey <= -1) upkey = -1;
+			    if(upkey == -1) $("#question").val("");
+			    else $("#question").val(messageStack[stacklen - upkey]);
 		    }
-		    if(upkey >= stacklen) upkey = stacklen;
-		    if(upkey <= -1) upkey = -1;
-		    if(upkey == -1) $("question").val("");
-		    else $("question").val(messageStack[stacklen - upkey]);
 		}
 
-		$("question").blur(function(){
+		$("#question").blur(function(){
 			upkey = -1;
 		});
 
