--- a/simpledjango/static/css/home.css
+++ b/simpledjango/static/css/home.css
@@ -194,19 +194,55 @@ body{
     transform: rotate(0deg);
     -webkit-transition: transform .35s ease;
     transition: transform .35s ease;
+    z-index: 100;
 }
 
 .plusbtn:focus{
+    outline: none;
     -webkit-transform: rotate(135deg);
     transform: rotate(135deg);
     -webkit-transition: transform .5s ease;
     transition: transform .5s ease;
 }
 
+.sample{
+    position: fixed;
+    right: 20px;
+    bottom: 100px;
+    width: 600px;
+    z-index: 100;
+    display: none;
+}
+
 .sample ul{
     list-style: none;
     padding-left: 3px;
+}
+
+.sample ul li{
+    color: gray;
+    font-size: 18pt;
+    border: solid 2px rgba(49, 49, 49, 1);
+    margin: 5px 0;
+    padding: 5px;
     background-color: rgba(255, 255, 255, 0.5);
+}
+
+.sample ul li:nth-child(1){
+    color: black;
+}
+
+.blurbox{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    z-index: 50;
+    background-color: rgba(49, 49, 49, 0.93);
+    visibility: hidden;
+    -webkit-transition: all .5s ease;
+    transition: all .5s ease;
 }
 
 footer{
