--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -5,6 +5,7 @@
 <head>
     <title>Chunzime</title>
     <link rel="stylesheet" type="text/css" href="{% static "css/home.css" %}"/>
+    <link href="https://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet">
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript">
     	var turn_cnt = 0;
