--- a/simple/templates/simple/home.html
+++ b/simple/templates/simple/home.html
@@ -97,6 +97,7 @@
 		});
 
 		$("#sample ul li").click(function(){
+			if($(this).text() == "Sample questions") return;
 			$("#question").val($(this).text());
 			tongsin();
 		})
