--- a/simpledjango/static/css/home.css
+++ b/simpledjango/static/css/home.css
@@ -149,6 +149,10 @@ body{
     line-height: 1.5;
 }
 
+.chat button {
+    transition: all 0.5s ease;
+}
+
 .col-12{
     margin: 8px 0px;
     width: 100%;
