--- a/simpledjango/static/css/home.css
+++ b/simpledjango/static/css/home.css
@@ -139,7 +139,7 @@ body{
     font-family: 'Dekko', 'nanumgothic', cursive;
     max-width: 60%;
     font-size: 1rem;
-    padding: 7px;
+    padding: 7px 10px;
     vertical-align: middle;
     overflow: auto;
     word-break: break-all;
